fix alignment elements

--- a/_dev/apps/ui/src/assets/scss/base/_reset.scss
+++ b/_dev/apps/ui/src/assets/scss/base/_reset.scss
@@ -8,11 +8,3 @@
   color: $primary-800;
   text-align: left;
 }
-
-& > *:not(.ps_gs-sticky-head) {
-  padding-left: 15px;
-  padding-right: 15px;
-  max-width: 1198px;
-  margin-left: auto;
-  margin-right: auto;
-}
